...

    <string name="error_msg_image_request_view">Try again!</string>

    <!-- Offline mode -->
    <!-- map -->
    <string name="no_connection_message">No internet connection</string>
    <string name="offline_mode_dialog_title">Offline map support</string>
    <string name="offline_mode_instructions">You can enable offline map support by downloading offline maps from the Google Maps app</string>
    <string name="offline_mode_dialog_link">Show me how</string>
    <string name="finish_visit_marker">You have visited all nearby favors</string>

    <!-- fragment_favor_published_view view -->
    <string name="save_draft_message">Draft saved: favor will be published as soon as connection returns</string>
    <string name="favor_delete_success_msg">Favor successfully deleted</string>
    <!-- Preference Titles -->
...
