<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.tabs.MapsPage">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/offline_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#4CAF50"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_sync_problem_48dp"
        android:visibility="invisible"
        app:backgroundTint="#4CAF50" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp"
        tools:context=".view.tabs.MapsPage" />

</FrameLayout>
